# ayatana-indicator-keyboard

./: .build.yml  .bzrignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  MERGE-REVIEW  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  update-po.sh
.pc/: applied-patches
.pc/default-icon-colour.patch/lib/: main.vala
.pc/disable-experimental-non-null.patch/tests/: Makefile.am  main.vala
.pc/relax-test-missing-ibus.patch/tests/: main.vala
contrib/: ayatana-indicator-keyboard-icon-generator-lomiri.py  ayatana-indicator-keyboard-icon-generator.py
data/: 50-org.ayatana.indicator.keyboard.AccountsService.pkla  50-org.ayatana.indicator.keyboard.AccountsService.rules  CMakeLists.txt  Makefile.am  ayatana-indicator-keyboard-icon-generator  ayatana-indicator-keyboard.conf.in  ayatana-indicator-keyboard.desktop.in  ayatana-indicator-keyboard.service.in  com.canonical.indicator.keyboard.gschema.xml  icon-1.svg.in  icon.svg.in  indicator-keyboard.conf.in  indicator-keyboard.desktop.in  indicator-keyboard.indicator  indicator-keyboard.service.in  main.vala  org.ayatana.indicator.keyboard  org.ayatana.indicator.keyboard.AccountsService.policy  org.ayatana.indicator.keyboard.AccountsService.xml  org.ayatana.indicator.keyboard.gschema.xml  org.ayatana.indicator.keyboard.gschema.xml.in
data/upstart/: Makefile.am  ayatana-indicator-keyboard.desktop.in  indicator-keyboard.desktop.in
debian/: README  README.Debian  README.source  ayatana-indicator-keyboard.gsettings-override  ayatana-indicator-keyboard.links  ayatana-indicator-keyboard.lintian-overrides  changelog  control  copyright  indicator-keyboard-autopilot.install  indicator-keyboard-schema.install  indicator-keyboard.install  rules  watch
debian/patches/: default-icon-colour.patch  disable-experimental-non-null.patch  relax-test-missing-ibus.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
lib/: Makefile.am  common.vala  greeter.vala  ibus-menu.vala  ibus-panel.vala  indicator-menu.vala  keyboard-plugin.vala  main.vala  source.vala  window-stack.vala
po/: CMakeLists.txt  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-keyboard.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  (+100 more)
src/: CMakeLists.txt  Makefile.am  keyboard-lomiri.c  keyboard-x11.c  keyboard.c  keyboard.h  languages.h  main.c  main.vala  service.c  service.h  system-layouts.h  unity-greeter.vala  unity-session.vala  utils.c  utils.h
tests/: Makefile.am  config.vala.in  indicator-keyboard-service.in  indicator-keyboard-test  indicator-keyboard-test.in  main.vala  manual
tests/autopilot/tests/: test_indicator_keyboard.py
tests/execute/: gkbd-keyboard-display  org.ayatana.indicator.keyboard.test.Execute
tests/profiles/: indicator-keyboard-test
tests/services/: ayatana-indicator-keyboard.service.in  indicator-keyboard.service.in
vapi/: README  Xkl-1.0.gir  libgnomekbd.vapi
vapi/libgnomekbd/: index.html
vapi/libgnomekbd/libgnomekbd/: Gkbd.Configuration.Configuration.html  Gkbd.Configuration.changed.html  Gkbd.Configuration.create_label_title.html  Gkbd.Configuration.get.html  Gkbd.Configuration.get_current_tooltip.html  Gkbd.Configuration.get_group_names.html  Gkbd.Configuration.get_keyboard_config.html  Gkbd.Configuration.get_short_group_names.html  Gkbd.Configuration.get_xkl_engine.html  Gkbd.Configuration.group_changed.html  Gkbd.Configuration.if_any_object_exists.html  Gkbd.Configuration.indicators_changed.html  Gkbd.Configuration.load_images.html  Gkbd.Configuration.remove_object.html  Gkbd.DESKTOP_SCHEMA.html  Gkbd.DesktopConfig.activate.html  Gkbd.DesktopConfig.html  Gkbd.DesktopConfig.init.html  Gkbd.DesktopConfig.load_extra_items.html  Gkbd.DesktopConfig.lock_prev_group.html  Gkbd.DesktopConfig.restore_group.html  Gkbd.DesktopConfig.save.html  Gkbd.Indicator.Indicator.html  Gkbd.Indicator.get_group_names.html  Gkbd.Indicator.get_image_filename.html  Gkbd.IndicatorConfig.activate.html  Gkbd.IndicatorConfig.background_color.html  Gkbd.IndicatorConfig.engine.html  Gkbd.IndicatorConfig.free_image_filenames.html  Gkbd.IndicatorConfig.get_fg_color_for_widget.html  Gkbd.IndicatorConfig.get_images_file.html  Gkbd.IndicatorConfig.icon_theme.html  Gkbd.IndicatorConfig.image_filenames.html  Gkbd.IndicatorConfig.settings.html  Gkbd.IndicatorConfig.show_flags.html  Gkbd.IndicatorConfig.start_listen.html  Gkbd.KEYBOARD_DRAWING_H.html  Gkbd.KeyboardConfig.engine.html  Gkbd.KeyboardConfig.equals.html  Gkbd.KeyboardConfig.format_full_description.html  (+35 more)
